--- a/ParseChat/Base.lproj/Main.storyboard
+++ b/ParseChat/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="ParseChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainVC" id="BYZ-38-t0r" customClass="LoginViewController" customModule="ParseChat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -67,11 +67,124 @@
                     <connections>
                         <outlet property="passwordTextField" destination="nX0-O6-bR1" id="wFk-2N-ybb"/>
                         <outlet property="usernameTextField" destination="Dd7-gr-djI" id="ld0-tL-Mwt"/>
+                        <segue destination="EOC-KZ-7oI" kind="presentation" identifier="toChatSegue" id="AGn-QM-wQ2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-79.710144927536234" y="133.25892857142856"/>
+        </scene>
+        <!--Group Chat-->
+        <scene sceneID="3Jx-Nk-kWh">
+            <objects>
+                <viewController storyboardIdentifier="ChatVC" id="gnC-LR-1J7" customClass="ChatViewController" customModule="ParseChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pfj-dy-mJv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RfM-Ly-oIv">
+                                <rect key="frame" x="20" y="108" width="300" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="zvi-ya-eNz"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAZ-ct-F6E">
+                                <rect key="frame" x="354" y="108" width="40" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="IER-k5-nGD"/>
+                                    <constraint firstAttribute="height" constant="30" id="YZa-Ia-bca"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Send"/>
+                                <connections>
+                                    <action selector="sendMessageAction:" destination="gnC-LR-1J7" eventType="touchUpInside" id="bto-sh-ywA"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="uEi-YX-ecD">
+                                <rect key="frame" x="0.0" y="158" width="414" height="704"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="chatCell" rowHeight="80" id="N0c-LJ-4hH" customClass="ChatViewCell" customModule="ParseChat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N0c-LJ-4hH" id="lIU-b5-AlW">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kjk-3C-uQd">
+                                                    <rect key="frame" x="10" y="5" width="384" height="23"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g6U-il-Dh6">
+                                                    <rect key="frame" x="10" y="36" width="384" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="g6U-il-Dh6" secondAttribute="trailing" constant="20" id="7JT-gR-aP6"/>
+                                                <constraint firstItem="Kjk-3C-uQd" firstAttribute="leading" secondItem="lIU-b5-AlW" secondAttribute="leading" constant="10" id="7U6-uf-tcO"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="g6U-il-Dh6" secondAttribute="bottom" constant="10" id="Bi0-mH-Dcb"/>
+                                                <constraint firstItem="Kjk-3C-uQd" firstAttribute="top" secondItem="lIU-b5-AlW" secondAttribute="top" constant="5" id="adm-HE-xKC"/>
+                                                <constraint firstAttribute="trailing" secondItem="Kjk-3C-uQd" secondAttribute="trailing" constant="20" id="gq1-fF-4ch"/>
+                                                <constraint firstItem="g6U-il-Dh6" firstAttribute="top" secondItem="Kjk-3C-uQd" secondAttribute="bottom" constant="8" id="sLa-3h-yUa"/>
+                                                <constraint firstItem="g6U-il-Dh6" firstAttribute="leading" secondItem="Kjk-3C-uQd" secondAttribute="leading" id="woV-SD-qhf"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageTextLabel" destination="g6U-il-Dh6" id="Ana-oW-v4J"/>
+                                            <outlet property="usernameLabel" destination="Kjk-3C-uQd" id="Pcz-V5-M1B"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.61568627450000002" green="0.67450980390000004" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="56d-zm-RMc" firstAttribute="trailing" secondItem="LAZ-ct-F6E" secondAttribute="trailing" constant="20" id="2dN-hk-exG"/>
+                            <constraint firstItem="uEi-YX-ecD" firstAttribute="leading" secondItem="56d-zm-RMc" secondAttribute="leading" id="2oo-Yc-iG9"/>
+                            <constraint firstItem="uEi-YX-ecD" firstAttribute="trailing" secondItem="56d-zm-RMc" secondAttribute="trailing" id="5sr-wa-alW"/>
+                            <constraint firstItem="uEi-YX-ecD" firstAttribute="bottom" secondItem="56d-zm-RMc" secondAttribute="bottom" id="Cfv-nB-PRC"/>
+                            <constraint firstItem="uEi-YX-ecD" firstAttribute="top" secondItem="RfM-Ly-oIv" secondAttribute="bottom" constant="20" id="JgH-e4-pr7"/>
+                            <constraint firstItem="LAZ-ct-F6E" firstAttribute="top" secondItem="RfM-Ly-oIv" secondAttribute="top" id="QNa-Wh-ijm"/>
+                            <constraint firstItem="RfM-Ly-oIv" firstAttribute="leading" secondItem="56d-zm-RMc" secondAttribute="leading" constant="20" id="bVY-fP-oPZ"/>
+                            <constraint firstItem="RfM-Ly-oIv" firstAttribute="top" secondItem="56d-zm-RMc" secondAttribute="top" constant="20" id="h4K-xo-JFX"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="56d-zm-RMc"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Group Chat" id="NBA-Ul-J7w"/>
+                    <connections>
+                        <outlet property="MessageTextField" destination="RfM-Ly-oIv" id="tcU-cx-qgA"/>
+                        <outlet property="tableView" destination="uEi-YX-ecD" id="PKS-vo-XsR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hgf-xD-6b7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1308.6956521739132" y="132.58928571428572"/>
+        </scene>
+        <!--Chat-->
+        <scene sceneID="yb2-Hk-XlJ">
+            <objects>
+                <navigationController title="Chat" automaticallyAdjustsScrollViewInsets="NO" id="EOC-KZ-7oI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8Co-IP-6P2">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="gnC-LR-1J7" kind="relationship" relationship="rootViewController" id="EfS-ap-rYi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rUi-PJ-I8g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="633" y="133"/>
         </scene>
     </scenes>
 </document>
