--- a/ParseChat/Base.lproj/Main.storyboard
+++ b/ParseChat/Base.lproj/Main.storyboard
@@ -83,22 +83,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RfM-Ly-oIv">
-                                <rect key="frame" x="20" y="108" width="300" height="30"/>
+                                <rect key="frame" x="20" y="108" width="325" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="zvi-ya-eNz"/>
+                                    <constraint firstAttribute="width" constant="325" id="dpd-eH-DUS"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAZ-ct-F6E">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAZ-ct-F6E">
                                 <rect key="frame" x="354" y="108" width="40" height="30"/>
+                                <color key="backgroundColor" red="0.61568627450000002" green="0.67450980390000004" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="IER-k5-nGD"/>
                                     <constraint firstAttribute="height" constant="30" id="YZa-Ia-bca"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Send"/>
+                                <state key="normal" image="send"/>
                                 <connections>
                                     <action selector="sendMessageAction:" destination="gnC-LR-1J7" eventType="touchUpInside" id="bto-sh-ywA"/>
                                 </connections>
@@ -107,37 +107,59 @@
                                 <rect key="frame" x="0.0" y="158" width="414" height="704"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="chatCell" rowHeight="80" id="N0c-LJ-4hH" customClass="ChatViewCell" customModule="ParseChat" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="80"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="chatCell" rowHeight="115" id="N0c-LJ-4hH" customClass="ChatViewCell" customModule="ParseChat" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="115"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N0c-LJ-4hH" id="lIU-b5-AlW">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="114.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XPr-is-Mpi">
+                                                    <rect key="frame" x="8" y="38" width="93" height="41.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g6U-il-Dh6">
+                                                            <rect key="frame" x="12" y="8" width="69" height="25.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.61568627450000002" green="0.67450980390000004" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <constraints>
+                                                        <constraint firstItem="g6U-il-Dh6" firstAttribute="bottom" secondItem="XPr-is-Mpi" secondAttribute="bottomMargin" id="CfF-VP-uWA"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="g6U-il-Dh6" secondAttribute="trailing" constant="4" id="Klz-NX-m3w"/>
+                                                        <constraint firstItem="g6U-il-Dh6" firstAttribute="leading" secondItem="XPr-is-Mpi" secondAttribute="leadingMargin" constant="4" id="LGd-7l-qjN"/>
+                                                        <constraint firstItem="g6U-il-Dh6" firstAttribute="top" secondItem="XPr-is-Mpi" secondAttribute="topMargin" id="enw-4Q-Wz4"/>
+                                                    </constraints>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kjk-3C-uQd">
-                                                    <rect key="frame" x="10" y="5" width="384" height="23"/>
+                                                    <rect key="frame" x="43" y="11" width="91" height="23"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g6U-il-Dh6">
-                                                    <rect key="frame" x="10" y="36" width="384" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="face1" translatesAutoresizingMaskIntoConstraints="NO" id="wjX-Uc-qRE">
+                                                    <rect key="frame" x="8" y="4" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="F4z-T6-0kT"/>
+                                                        <constraint firstAttribute="height" constant="30" id="Hid-gi-MSW"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="g6U-il-Dh6" secondAttribute="trailing" constant="20" id="7JT-gR-aP6"/>
-                                                <constraint firstItem="Kjk-3C-uQd" firstAttribute="leading" secondItem="lIU-b5-AlW" secondAttribute="leading" constant="10" id="7U6-uf-tcO"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="g6U-il-Dh6" secondAttribute="bottom" constant="10" id="Bi0-mH-Dcb"/>
-                                                <constraint firstItem="Kjk-3C-uQd" firstAttribute="top" secondItem="lIU-b5-AlW" secondAttribute="top" constant="5" id="adm-HE-xKC"/>
-                                                <constraint firstAttribute="trailing" secondItem="Kjk-3C-uQd" secondAttribute="trailing" constant="20" id="gq1-fF-4ch"/>
-                                                <constraint firstItem="g6U-il-Dh6" firstAttribute="top" secondItem="Kjk-3C-uQd" secondAttribute="bottom" constant="8" id="sLa-3h-yUa"/>
-                                                <constraint firstItem="g6U-il-Dh6" firstAttribute="leading" secondItem="Kjk-3C-uQd" secondAttribute="leading" id="woV-SD-qhf"/>
+                                                <constraint firstAttribute="bottom" secondItem="XPr-is-Mpi" secondAttribute="bottom" constant="35" id="4lM-Fa-oiz"/>
+                                                <constraint firstItem="XPr-is-Mpi" firstAttribute="top" secondItem="wjX-Uc-qRE" secondAttribute="bottom" constant="4" id="Jmy-62-B4P"/>
+                                                <constraint firstItem="wjX-Uc-qRE" firstAttribute="top" secondItem="lIU-b5-AlW" secondAttribute="top" constant="4" id="S2u-gM-GOK"/>
+                                                <constraint firstItem="wjX-Uc-qRE" firstAttribute="leading" secondItem="XPr-is-Mpi" secondAttribute="leading" id="aQa-tE-GMX"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Kjk-3C-uQd" secondAttribute="trailing" constant="16" id="e3P-ee-3rl"/>
+                                                <constraint firstItem="Kjk-3C-uQd" firstAttribute="leading" secondItem="wjX-Uc-qRE" secondAttribute="trailing" constant="5" id="hvo-ii-ril"/>
+                                                <constraint firstItem="XPr-is-Mpi" firstAttribute="leading" secondItem="lIU-b5-AlW" secondAttribute="leading" constant="8" id="slo-Ib-d9Q"/>
+                                                <constraint firstItem="Kjk-3C-uQd" firstAttribute="bottom" secondItem="wjX-Uc-qRE" secondAttribute="bottom" id="t2w-VK-t42"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="XPr-is-Mpi" secondAttribute="trailing" constant="20" id="vSU-jU-DSy"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="bubbleView" destination="XPr-is-Mpi" id="3gj-X8-zKq"/>
                                             <outlet property="messageTextLabel" destination="g6U-il-Dh6" id="Ana-oW-v4J"/>
                                             <outlet property="usernameLabel" destination="Kjk-3C-uQd" id="Pcz-V5-M1B"/>
                                         </connections>
@@ -187,4 +209,8 @@
             <point key="canvasLocation" x="633" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="face1" width="128" height="128"/>
+        <image name="send" width="32" height="32"/>
+    </resources>
 </document>
